Side stepped the publication date z-index issue (popup was appearing in sidebar but the portion that covered the main panel was hidden) by simply moving the popup calendar to the left in the sidebar (style="left: 0px;").

--- a/src/app/layout/components/sidebar/sidebar.component.scss
+++ b/src/app/layout/components/sidebar/sidebar.component.scss
@@ -158,14 +158,9 @@ $topnav-background-color: #222;
     cursor: pointer;
 }
 
-// TODO: Fix this, problem with datepicker z-index
+// Fix issue with datepicker z-index
 ::ng-deep ngb-datepicker.dropdown-menu.ng-star-inserted {
-	z-index: 99999 !important;
-	position: fixed !important;
-	//margin-top: 300px;
-    //margin-left: 43px;
-    top: 546px !important;
-    left: 125px !important;
+    left: 0px !important;
 }
 
 .records-spinner {
